Fix CSS on smaller devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,6 +27,7 @@ body {
 #ContentBox {
     padding: 24px 48px;
     text-align: center;
+    overflow-wrap: anywhere;
 }
 
 .smallText {
